# aitrade

./: .gitignore  Cargo.toml  README.md  demo.sh  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql
backend/src/: auth.rs  db.rs  error.rs  events.rs  main.rs  risk.rs  state.rs
backend/src/engine/: candle_builder.rs  confirmation.rs  executor.rs  mod.rs  reflex.rs
backend/src/models/: position.rs  strategy.rs  tick.rs
backend/src/routes/: backtest.rs  mod.rs  mt5.rs  risk.rs
frontend/: Dockerfile  package-lock.json
frontend/src/: app.css
frontend/src/lib/: stores.ts
frontend/src/routes/: +page.svelte
mt5-bridge/: AntGravityBridge.mq5
openclaw/: .env.example  Cargo.toml  Dockerfile
openclaw/src/: ai.rs  config.rs  main.rs  market.rs  poster.rs  prompt.rs  strategy.rs
src/: events.rs  main.rs  state.rs
src/engine/: executor.rs  reflex.rs
src/models/: mod.rs  position.rs  tick.rs
src/routes/: brain.rs  mod.rs  monitor.rs  mt5.rs
