[package]
name = "antigravity"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity Team"]
description = "High-performance automated trading backend — Brain & Reflex architecture"

# Optimize release builds for maximum runtime performance
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
# --- Async Runtime ---
tokio = { version = "1", features = ["full"] }

# --- Web Framework ---
axum = { version = "0.7", features = ["ws"] }   # ws = WebSocket support for the Monitor Loop
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Utilities ---
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"

# --- Async Streams (WebSocket) ---
futures-util = "0.3"

# --- HTTP Client (for outbound calls to OpenClaw / MT5) ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
