[package]
name = "openclaw"
version = "0.1.0"
edition = "2021"
description = "OpenClaw — AI Brain Agent for Antigravity Trading System"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy     = "0.15"
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
